--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "format": "npx prettier --write ./src/**/*.{js,jsx}"
   },
   "dependencies": {
+    "@cloudinary/react": "^1.11.2",
+    "@cloudinary/url-gen": "^1.11.2",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.5.0",
     "firebase": "^10.3.0",
@@ -18,6 +20,7 @@
     "react-aria-components": "^1.0.0-beta.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
+    "react-image-file-resizer": "^0.4.8",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
     "yup": "^1.2.0"
